[gd_scene load_steps=94 format=2]

[ext_resource path="res://addons/rmsmartshape/shapes/shape_closed.gd" type="Script" id=1]
[ext_resource path="res://addons/rmsmartshape/shapes/point_array.gd" type="Script" id=2]
[ext_resource path="res://addons/rmsmartshape/shapes/point.gd" type="Script" id=3]
[ext_resource path="res://addons/rmsmartshape/vertex_properties.gd" type="Script" id=4]
[ext_resource path="res://addons/rmsmartshape/materials/shape_material.gd" type="Script" id=5]
[ext_resource path="res://Project/Levels/EarthLevel/grass.png" type="Texture" id=6]
[ext_resource path="res://Project/UI/PauseMenu/PauseMenu.tscn" type="PackedScene" id=7]
[ext_resource path="res://Project/Levels/EarthLevel/cloud2.png" type="Texture" id=8]
[ext_resource path="res://Project/Levels/EarthLevel/cloud4.png" type="Texture" id=9]
[ext_resource path="res://Project/Levels/EarthLevel/cloud8 2.png" type="Texture" id=10]
[ext_resource path="res://Project/Levels/EarthLevel/cloud9.png" type="Texture" id=11]
[ext_resource path="res://Project/Levels/EarthLevel/cloud7.png" type="Texture" id=12]
[ext_resource path="res://Project/Levels/EarthLevel/cloud3.png" type="Texture" id=13]
[ext_resource path="res://Project/Levels/EarthLevel/cloud5.png" type="Texture" id=14]
[ext_resource path="res://Project/UI/Transition/Transition.tscn" type="PackedScene" id=15]
[ext_resource path="res://Project/Levels/EarthLevel/Earth.gd" type="Script" id=16]
[ext_resource path="res://Project/UI/HUD/HUD.tscn" type="PackedScene" id=17]

[sub_resource type="Resource" id=1]
script = ExtResource( 4 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=2]
script = ExtResource( 3 )
position = Vector2( -405.984, 183.9 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 1 )

[sub_resource type="Resource" id=3]
script = ExtResource( 4 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=4]
script = ExtResource( 3 )
position = Vector2( 1243.02, 284.9 )
point_in = Vector2( -775, 311 )
point_out = Vector2( 775, -311 )
properties = SubResource( 3 )

[sub_resource type="Resource" id=5]
script = ExtResource( 4 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=6]
script = ExtResource( 3 )
position = Vector2( -405.984, 183.9 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 5 )

[sub_resource type="Resource" id=7]
script = ExtResource( 4 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=8]
script = ExtResource( 3 )
position = Vector2( -108.587, 5081.81 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 7 )

[sub_resource type="Resource" id=9]
script = ExtResource( 4 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=10]
script = ExtResource( 3 )
position = Vector2( 2385, 365.9 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 9 )

[sub_resource type="Resource" id=11]
script = ExtResource( 4 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=12]
script = ExtResource( 3 )
position = Vector2( 3050, 906.9 )
point_in = Vector2( -353, -99 )
point_out = Vector2( 353, 99 )
properties = SubResource( 11 )

[sub_resource type="Resource" id=13]
script = ExtResource( 4 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=14]
script = ExtResource( 3 )
position = Vector2( 3946, 1171.9 )
point_in = Vector2( -207, -74 )
point_out = Vector2( 207, 74 )
properties = SubResource( 13 )

[sub_resource type="Resource" id=15]
script = ExtResource( 4 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=16]
script = ExtResource( 3 )
position = Vector2( 5405, 458.9 )
point_in = Vector2( -451, 374 )
point_out = Vector2( 451, -374 )
properties = SubResource( 15 )

[sub_resource type="Resource" id=17]
script = ExtResource( 4 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=18]
script = ExtResource( 3 )
position = Vector2( 3977.16, 4547.36 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 17 )

[sub_resource type="Resource" id=19]
script = ExtResource( 4 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=20]
script = ExtResource( 3 )
position = Vector2( 6975, 716.9 )
point_in = Vector2( -366, 101 )
point_out = Vector2( 366, -101 )
properties = SubResource( 19 )

[sub_resource type="Resource" id=21]
script = ExtResource( 4 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=22]
script = ExtResource( 3 )
position = Vector2( 6279, 383.9 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 21 )

[sub_resource type="Resource" id=23]
script = ExtResource( 4 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=24]
script = ExtResource( 3 )
position = Vector2( 5680.13, 4334.49 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 23 )

[sub_resource type="Resource" id=25]
script = ExtResource( 4 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=26]
script = ExtResource( 3 )
position = Vector2( 7461, 727.9 )
point_in = Vector2( -365, 149 )
point_out = Vector2( 365, -149 )
properties = SubResource( 25 )

[sub_resource type="Resource" id=27]
script = ExtResource( 4 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=28]
script = ExtResource( 3 )
position = Vector2( 8247, 707.9 )
point_in = Vector2( -189, -68 )
point_out = Vector2( 189, 68 )
properties = SubResource( 27 )

[sub_resource type="Resource" id=29]
script = ExtResource( 4 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=30]
script = ExtResource( 3 )
position = Vector2( 9033, 286.9 )
point_in = Vector2( -438, -14 )
point_out = Vector2( 438, 14 )
properties = SubResource( 29 )

[sub_resource type="Resource" id=31]
script = ExtResource( 4 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=32]
script = ExtResource( 3 )
position = Vector2( 9974, 454.9 )
point_in = Vector2( -213, -21 )
point_out = Vector2( 213, 21 )
properties = SubResource( 31 )

[sub_resource type="Resource" id=33]
script = ExtResource( 4 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=34]
script = ExtResource( 3 )
position = Vector2( 7958.02, 4957.53 )
point_in = Vector2( 416, -443 )
point_out = Vector2( -416, 443 )
properties = SubResource( 33 )

[sub_resource type="Resource" id=35]
script = ExtResource( 4 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=36]
script = ExtResource( 3 )
position = Vector2( 9910.61, 5083.53 )
point_in = Vector2( 1305, -209 )
point_out = Vector2( -1305, 209 )
properties = SubResource( 35 )

[sub_resource type="Resource" id=37]
script = ExtResource( 4 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=38]
script = ExtResource( 3 )
position = Vector2( 12921, 2041.9 )
point_in = Vector2( -815, -36 )
point_out = Vector2( 815, 36 )
properties = SubResource( 37 )

[sub_resource type="Resource" id=39]
script = ExtResource( 4 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=40]
script = ExtResource( 3 )
position = Vector2( 14337, 1914.9 )
point_in = Vector2( -147, -334 )
point_out = Vector2( 147, 334 )
properties = SubResource( 39 )

[sub_resource type="Resource" id=41]
script = ExtResource( 4 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=42]
script = ExtResource( 3 )
position = Vector2( 14154.7, 4817.5 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 41 )

[sub_resource type="Resource" id=43]
script = ExtResource( 4 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=44]
script = ExtResource( 3 )
position = Vector2( 15065, 1669.9 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 43 )

[sub_resource type="Resource" id=45]
script = ExtResource( 4 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=46]
script = ExtResource( 3 )
position = Vector2( 15997, 1041.9 )
point_in = Vector2( -383, -380 )
point_out = Vector2( 383, 380 )
properties = SubResource( 45 )

[sub_resource type="Resource" id=47]
script = ExtResource( 4 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=48]
script = ExtResource( 3 )
position = Vector2( 16830, 2481.9 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 47 )

[sub_resource type="Resource" id=49]
script = ExtResource( 4 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=50]
script = ExtResource( 3 )
position = Vector2( 17594, 3182.9 )
point_in = Vector2( -387, -376 )
point_out = Vector2( 387, 376 )
properties = SubResource( 49 )

[sub_resource type="Resource" id=51]
script = ExtResource( 4 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=52]
script = ExtResource( 3 )
position = Vector2( 18557, 3909.9 )
point_in = Vector2( -245, -75 )
point_out = Vector2( 245, 75 )
properties = SubResource( 51 )

[sub_resource type="Resource" id=53]
script = ExtResource( 4 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=54]
script = ExtResource( 3 )
position = Vector2( 16413.6, 4327.34 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 53 )

[sub_resource type="Resource" id=55]
script = ExtResource( 4 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=56]
script = ExtResource( 3 )
position = Vector2( 19534, 4705.9 )
point_in = Vector2( 435, -41 )
point_out = Vector2( -435, 41 )
properties = SubResource( 55 )

[sub_resource type="Resource" id=57]
script = ExtResource( 4 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=58]
script = ExtResource( 3 )
position = Vector2( 19595, 3841.9 )
point_in = Vector2( -275, 31 )
point_out = Vector2( 275, -31 )
properties = SubResource( 57 )

[sub_resource type="Resource" id=59]
script = ExtResource( 4 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=60]
script = ExtResource( 3 )
position = Vector2( 17980, 4217.9 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 59 )

[sub_resource type="Resource" id=61]
script = ExtResource( 4 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=62]
script = ExtResource( 3 )
position = Vector2( 12190.9, 5274.84 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 61 )

[sub_resource type="Resource" id=63]
script = ExtResource( 4 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=64]
script = ExtResource( 3 )
position = Vector2( 12169.1, 5030.89 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 63 )

[sub_resource type="Resource" id=65]
script = ExtResource( 4 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=66]
script = ExtResource( 3 )
position = Vector2( -286.173, 679.722 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 65 )

[sub_resource type="Resource" id=67]
script = ExtResource( 4 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=68]
script = ExtResource( 3 )
position = Vector2( -176.572, 792.859 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 67 )

[sub_resource type="Resource" id=69]
script = ExtResource( 4 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=70]
script = ExtResource( 3 )
position = Vector2( -345.571, 430.114 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 69 )

[sub_resource type="Resource" id=71]
script = ExtResource( 4 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=72]
script = ExtResource( 3 )
position = Vector2( 3465.03, 1028.33 )
point_in = Vector2( -202.233, -94.7524 )
point_out = Vector2( 202.233, 94.7524 )
properties = SubResource( 71 )

[sub_resource type="Resource" id=73]
script = ExtResource( 2 )
_points = {
0: SubResource( 2 ),
1: SubResource( 4 ),
3: SubResource( 6 ),
4: SubResource( 8 ),
5: SubResource( 10 ),
6: SubResource( 12 ),
7: SubResource( 14 ),
10: SubResource( 16 ),
11: SubResource( 18 ),
12: SubResource( 20 ),
13: SubResource( 22 ),
14: SubResource( 24 ),
15: SubResource( 26 ),
16: SubResource( 28 ),
17: SubResource( 30 ),
19: SubResource( 32 ),
20: SubResource( 34 ),
21: SubResource( 36 ),
22: SubResource( 38 ),
23: SubResource( 40 ),
24: SubResource( 42 ),
25: SubResource( 44 ),
26: SubResource( 46 ),
27: SubResource( 48 ),
28: SubResource( 50 ),
29: SubResource( 52 ),
30: SubResource( 54 ),
31: SubResource( 56 ),
32: SubResource( 58 ),
33: SubResource( 60 ),
34: SubResource( 62 ),
35: SubResource( 64 ),
36: SubResource( 66 ),
37: SubResource( 68 ),
38: SubResource( 70 ),
39: SubResource( 72 )
}
_point_order = [ 0, 1, 5, 6, 39, 7, 10, 13, 12, 15, 16, 17, 19, 22, 23, 25, 26, 27, 28, 29, 32, 31, 33, 30, 24, 35, 34, 21, 20, 14, 11, 4, 37, 36, 38, 3 ]
_constraints = {
[ 0, 3 ]: 15
}
_next_key = 40

[sub_resource type="Resource" id=74]
script = ExtResource( 5 )
_edge_meta_materials = [  ]
fill_textures = [ ExtResource( 6 ) ]
fill_texture_normals = [  ]
fill_texture_z_index = -10
fill_mesh_offset = 0.0
render_offset = 0.0

[sub_resource type="StreamTexture" id=75]
flags = 4

[sub_resource type="RectangleShape2D" id=76]
extents = Vector2( 353, 3853.91 )

[node name="Earth" type="Node2D"]
script = ExtResource( 16 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="SS2D_Shape_Closed" type="Node2D" parent="StaticBody2D"]
script = ExtResource( 1 )
_points = SubResource( 73 )
material_overrides = {
}
shape_material = SubResource( 74 )
tessellation_stages = 5
tessellation_tolerence = 4.0
flip_edges = false
render_edges = true
collision_size = 32.0
collision_offset = 0.0
collision_polygon_node_path = NodePath("../CollisionPolygon2D")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
visible = false
modulate = Color( 1, 1, 1, 0.3 )
polygon = PoolVector2Array( -411.681, 177.342, -257.308, 243.407, -88.5718, 297.849, 127.896, 351.009, 380.691, 389.587, 658.41, 400.301, 803.053, 391.053, 949.652, 369.836, 1096.78, 334.999, 1243.02, 284.9, 1383.56, 234.546, 1514.6, 199.076, 1636.19, 176.874, 1748.41, 166.337, 1851.3, 165.862, 1944.93, 173.843, 2029.35, 188.678, 2104.64, 208.762, 2170.84, 232.49, 2228.03, 258.249, 2315.57, 309.483, 2367.73, 349.649, 2385.04, 365.865, 2439.27, 436.502, 2585.14, 599.264, 2684.47, 692.207, 2797.18, 780.592, 2857.55, 820.203, 2920.08, 855.218, 2984.37, 884.492, 3050.01, 906.882, 3314.05, 969.207, 3337.92, 974.349, 3364.51, 983.287, 3465.03, 1028.33, 3596.4, 1080.29, 3811.96, 1131.57, 3946, 1171.9, 3956.14, 1175, 3967.12, 1177.41, 3991.54, 1180.17, 4019.1, 1180.29, 4049.62, 1177.83, 4118.86, 1165.61, 4197.87, 1144.29, 4379.68, 1077.42, 4583.99, 983.387, 5015.86, 738.475, 5405, 458.9, 5489.12, 396.403, 5572.03, 348.274, 5653.12, 313.073, 5731.82, 289.375, 5807.55, 275.756, 5879.73, 270.793, 5947.78, 273.061, 6011.13, 281.136, 6069.19, 293.593, 6121.38, 309, 6205.87, 343.005, 6259.95, 371.772, 6279.11, 383.772, 6336.29, 450.126, 6402.73, 515.883, 6489.77, 588.253, 6593.95, 655.898, 6651.4, 684.404, 6711.85, 707.454, 6774.87, 723.641, 6840.01, 731.566, 6873.25, 731.986, 6906.87, 729.792, 6940.8, 724.818, 6975, 716.9, 7036.76, 702.002, 7085.99, 694.458, 7124.48, 693.151, 7140.26, 694.488, 7154.02, 696.942, 7165.99, 700.387, 7176.39, 704.685, 7185.45, 709.693, 7193.38, 715.269, 7200.42, 721.271, 7206.78, 727.553, 7218.38, 740.4, 7229.98, 752.668, 7236.33, 758.24, 7243.35, 763.242, 7251.25, 767.54, 7260.27, 770.997, 7270.63, 773.469, 7282.55, 774.815, 7296.26, 774.888, 7311.97, 773.536, 7350.32, 766.027, 7461, 727.9, 7591.81, 681.452, 7711.21, 652.329, 7820.26, 638.138, 7920, 636.501, 8011.49, 645.039, 8095.79, 661.362, 8247, 707.9, 8255.84, 710.66, 8264.64, 712.621, 8273.41, 713.796, 8282.16, 714.21, 8290.89, 713.888, 8299.62, 712.854, 8308.34, 711.134, 8317.07, 708.742, 8334.57, 702.082, 8352.17, 693.073, 8387.92, 668.795, 8546.62, 517.649, 8641.65, 431.872, 8694.68, 392.024, 8751.97, 356.318, 8814, 326.351, 8881.22, 303.739, 8916.91, 295.688, 8954.07, 290.057, 8992.75, 287.058, 9033, 286.88, 9334.86, 316.08, 9587.88, 368.274, 9974, 454.897, 9985.23, 456.952, 9998.89, 461.179, 10033.3, 475.771, 10128.4, 527.633, 11221.8, 1242.77, 12146.7, 1781.67, 12569.1, 1964.2, 12755.9, 2018.36, 12841.4, 2034.22, 12921, 2041.88, 13069.6, 2042.73, 13209.8, 2033.06, 13465.4, 1990.24, 13879.5, 1866.65, 14039.3, 1817.78, 14107.6, 1803.59, 14138.9, 1799.93, 14168.3, 1798.88, 14195.9, 1800.7, 14221.6, 1805.66, 14233.7, 1809.39, 14245.4, 1813.99, 14256.6, 1819.49, 14267.4, 1825.93, 14277.7, 1833.33, 14287.5, 1841.74, 14296.9, 1851.18, 14305.8, 1861.67, 14322.3, 1885.96, 14337, 1914.9, 14344.2, 1929.89, 14352, 1943.58, 14360.4, 1956, 14369.4, 1967.18, 14378.9, 1977.16, 14389, 1985.98, 14399.5, 1993.67, 14410.5, 2000.25, 14421.9, 2005.78, 14433.8, 2010.27, 14446.1, 2013.77, 14458.8, 2016.29, 14485.1, 2018.61, 14512.8, 2017.5, 14541.4, 2013.23, 14571, 2006.05, 14631.9, 1984.14, 14694.1, 1953.94, 14756.1, 1917.64, 14873.4, 1835.48, 14971.9, 1755.15, 15064.9, 1669.8, 15156.8, 1518.33, 15258.9, 1370.99, 15387.4, 1213.39, 15458.9, 1139.52, 15533.8, 1073.59, 15611.1, 1019.15, 15650.4, 997.336, 15689.8, 979.693, 15729.3, 966.671, 15768.8, 958.727, 15788.4, 956.796, 15808, 956.284, 15827.6, 957.257, 15847, 959.77, 15866.3, 963.878, 15885.5, 969.636, 15904.5, 977.098, 15923.4, 986.32, 15942.1, 997.355, 15960.6, 1010.25, 15997, 1041.88, 16069.5, 1120.69, 16142.8, 1212.87, 16288.7, 1427.2, 16557.1, 1904.39, 16830.2, 2481.72, 17594, 3182.9, 18128.8, 3659.25, 18357.6, 3817.52, 18461.2, 3872.53, 18557, 3909.87, 18606, 3921.82, 18660.7, 3929.76, 18783.9, 3935.25, 19064.8, 3915.64, 19595, 3841.89, 19607.8, 3841.07, 19620.3, 3841.51, 19632.5, 3843.18, 19644.4, 3846.03, 19656.1, 3850.01, 19667.4, 3855.1, 19678.5, 3861.26, 19689.2, 3868.43, 19699.6, 3876.6, 19709.7, 3885.7, 19728.8, 3906.59, 19746.5, 3930.82, 19762.7, 3958.05, 19777.3, 3987.98, 19790.3, 4020.29, 19811.3, 4090.84, 19824.9, 4167.2, 19830.8, 4246.9, 19828.3, 4327.44, 19817, 4406.34, 19796.3, 4481.11, 19782.3, 4516.16, 19765.7, 4549.25, 19746.6, 4580.07, 19724.7, 4608.3, 19700.2, 4633.63, 19672.8, 4655.76, 19642.6, 4674.36, 19609.4, 4689.13, 19573.2, 4699.76, 19534, 4705.92, 19491.3, 4708.12, 19444.9, 4707.19, 19342.3, 4696.73, 19107.7, 4646.97, 18593.9, 4477.29, 17979.9, 4218.33, 16413.6, 4327.38, 14154.7, 4817.52, 12172.6, 5033.8, 12195.4, 5280.58, 12018.1, 5215.57, 11540.1, 5100.83, 11205.6, 5052.23, 10817.5, 5025.26, 10383.3, 5031.76, 9910.61, 5083.53, 9678.2, 5111.7, 9469.09, 5119.97, 9281.47, 5111.56, 9113.47, 5089.73, 8963.26, 5057.7, 8829, 5018.71, 8600.94, 4932.78, 8414.55, 4857.84, 8332.38, 4832.57, 8293.24, 4824.39, 8255.1, 4819.74, 8217.71, 4819.01, 8180.87, 4822.6, 8144.32, 4830.91, 8107.85, 4844.35, 8071.21, 4863.33, 8034.18, 4888.25, 7996.53, 4919.52, 7958.02, 4957.53, 7937.49, 4977.22, 7914.9, 4994.73, 7890.34, 5010.16, 7863.89, 5023.55, 7835.63, 5034.97, 7805.63, 5044.48, 7740.71, 5057.97, 7669.74, 5064.5, 7593.33, 5064.56, 7426.6, 5047.09, 7245.36, 5009.34, 7054.47, 4955.08, 6663.07, 4812.15, 5680.02, 4335.14, 3977.16, 4547.36, -112.085, 5085.86, -177.609, 793.289, -286.674, 679.996, -345.571, 430.114 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 2560, 2560 )

[node name="ColorRect" type="ColorRect" parent="ParallaxBackground/ParallaxLayer"]
margin_left = -945.0
margin_top = -946.0
margin_right = 2492.0
margin_bottom = 1668.0
color = Color( 0.0352941, 0.878431, 0.988235, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cloud7" type="Sprite" parent="ParallaxBackground/ParallaxLayer/ColorRect"]
position = Vector2( 4962, 1901.5 )
texture = ExtResource( 12 )

[node name="cloud8 2" type="Sprite" parent="ParallaxBackground/ParallaxLayer/ColorRect"]
position = Vector2( 5634, 1109.5 )
texture = ExtResource( 10 )

[node name="cloud9" type="Sprite" parent="ParallaxBackground/ParallaxLayer/ColorRect"]
position = Vector2( 2412, 823.5 )
scale = Vector2( 1, 1.06723 )
texture = ExtResource( 11 )

[node name="cloud2" type="Sprite" parent="ParallaxBackground/ParallaxLayer/ColorRect"]
position = Vector2( 4946, 1853.5 )
texture = ExtResource( 8 )

[node name="cloud5" type="Sprite" parent="ParallaxBackground/ParallaxLayer/ColorRect"]
position = Vector2( 2698, 2253.5 )
texture = ExtResource( 14 )

[node name="cloud3" type="Sprite" parent="ParallaxBackground/ParallaxLayer/ColorRect"]
position = Vector2( 1222, 2041.5 )
scale = Vector2( 1.13559, 0.669422 )
texture = ExtResource( 13 )

[node name="cloud4" type="Sprite" parent="ParallaxBackground/ParallaxLayer/ColorRect"]
position = Vector2( 1714, 1093.5 )
texture = ExtResource( 9 )

[node name="cloud1" type="Sprite" parent="ParallaxBackground/ParallaxLayer/ColorRect"]
position = Vector2( 610, 415.5 )
texture = SubResource( 75 )

[node name="FinishZone" type="Area2D" parent="."]
position = Vector2( 19084, 1784 )

[node name="FinishCollision" type="CollisionShape2D" parent="FinishZone"]
shape = SubResource( 76 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TransitonColor" parent="CanvasLayer" instance=ExtResource( 15 )]

[node name="HUD" parent="CanvasLayer" instance=ExtResource( 17 )]

[node name="SpawnPoint" type="Position2D" parent="."]
position = Vector2( 176.438, 199.337 )

[node name="Pause" type="CanvasLayer" parent="."]

[node name="Pause" parent="Pause" instance=ExtResource( 7 )]
pause_mode = 2
visible = false

[connection signal="body_entered" from="FinishZone" to="." method="_on_FinishZone_body_entered"]
